tests/quick-start/quick-start.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

Touch @flow file, expect error.
Error ----------------------------------------------------------------- a.js:4:2

Error: a.js:4
  4: (0: string);
      ^ Cannot cast `0` to string because number [1] is incompatible with string [2].
  References:
    4: (0: string);
        ^ [1]: number
    4: (0: string);
           ^^^^^^ [2]: string


Found 1 error

Make file @noflow, expect error to go away.
No errors!

Revert file, expect error again.
Error ----------------------------------------------------------------- a.js:4:2

Error: a.js:4
  4: (0: string);
      ^ Cannot cast `0` to string because number [1] is incompatible with string [2].
  References:
    4: (0: string);
        ^ [1]: number
    4: (0: string);
           ^^^^^^ [2]: string


Found 1 error

Done!
